fix(CR-47): remove fixed thread pool completely